--- a/src/styles/components/dashboard.scss
+++ b/src/styles/components/dashboard.scss
@@ -1,6 +1,6 @@
 .layout {
   width: 20vw;
-  margin: 0.5rem auto 1rem;
+  margin: 1rem auto 1rem;
   
   .flex {
     display: flex;
@@ -14,12 +14,14 @@
 
 .thirdFlex {
   width: 70vw;
+  justify-content: space-between;
 
   .flex:first-of-type {
-    flex: 1 1 80%;
+    flex:0 1 40%;
   }
 
   .flex:last-of-type {
+    flex:0 1 40%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,6 +29,7 @@
     span {
       font-size: 2.5rem;
       text-align: center;
+      width: 70%;
     }
   }
 }
