--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -6,27 +6,41 @@
   color: rgba(0,0,0,0.5);
 }
 
-.wrapper-flex-items {
+.flex-item:nth-of-type(1) {
   flex: 1 1 50%;
-
+  
   h2 {
     text-align: center;
     margin-bottom: 1rem;
+    font-family: $heading-font-family;
   }
 
-  .flex-posts {
-    flex-wrap: wrap;
-  
+  .flex-item__posts {
+
     .flex {
       flex: 1 1 45%;
-      margin-bottom: 1rem;
-      margin-right: .5rem;
+      margin: 0 .5rem .5rem 0;
 
-      .v-card__title,
+      .flex-item__posts-heading,
+      .flex-item__posts-desc {
+        text-align: center;
+        margin-bottom: .5rem;
+      }
+      .flex-item__posts-heading {
+        font-family: $heading-font-family;
+      }
+
+      .flex-item__posts-desc {
+        font-family: $subheading-font-family;
+      }
+
       .v-card__actions {
-        display: flex;
         justify-content: center;
       }
     }
   }
+}
+
+.flex-item:nth-of-type(2) {
+  flex: 1 1 50%;
 }
