Improved News section and Dashboard - Add Post and Manage Post.

--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -44,3 +44,10 @@
 .flex-item:nth-of-type(2) {
   flex: 1 1 50%;
 }
+
+.new-icon {
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 100px;
+}
