--- a/src/styles/components/dashboard.scss
+++ b/src/styles/components/dashboard.scss
@@ -7,12 +7,19 @@
 }
 
 .third-flexbox {
-  margin: 0 auto;
+  margin: 3rem auto 0;
   width: 70vw;
-  justify-content: space-between;
+  //justify-content: space-between;
 
   .flex {
-    flex: 0 1 40%;
+    flex: 0 1 50%;
+  }
+
+  .flex:nth-of-type(1) {
+    .v-image {
+      border-radius: 20px;
+      box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);    
+    }
   }
 
   .flex:nth-of-type(2) {
@@ -21,7 +28,7 @@
     align-items: center;
 
     span {
-      font-family: $base-font-family;
+      font-family: $heading-font-family;
       font-size: 2.5rem;
       text-align: center;
     }
